implement a couple of the index page components

--- a/src/css/common/typo.styl
+++ b/src/css/common/typo.styl
@@ -1,15 +1,23 @@
+.h1,
+.h2,
+.h3,
+.h4 {
+    font-weight: 400;
+}
+
 .h1 {
-    font-size: remify(36px);
+    remify(font-size, 36px);
 }
 
 .h2 {
-    font-size: remify(30px);
+    remify(font-size, 30px);
 }
 
 .h3 {
-    font-size: remify(24px);
+    remify(font-size, 24px);
 }
 
 .h4 {
-    font-size: remify(20px);
+    remify(font-size, 20px);
 }
+
