--- a/src/css/components/navbar.styl
+++ b/src/css/components/navbar.styl
@@ -7,7 +7,7 @@
 
     &__container {
         center(container-width);
-        border-bottom: 1px solid rgba(white, 0.2);
+        border-bottom: 1px solid rgba(light-gray-high, 0.2);
     }
 
     &__list {
@@ -28,9 +28,10 @@
     &__item {
         padding: 15px 10px;
         display: block;
-        font-size: remify(14px);
         text-transform: uppercase;
         color: white;
+
+        remify(font-size, 14px);
 
         &--logo {
             display: block;
