--- a/src/css/styles.styl
+++ b/src/css/styles.styl
@@ -1,17 +1,22 @@
 // external resources
 @import 'jeet';
 @import 'rupture';
+@import 'nib';
+
+// helpers
+@import 'helpers/mixins';
+@import 'helpers/variables';
+@import 'helpers/placeholders';
 
 // common css rules and specs
-@import 'common/variables';
 @import 'common/fonts';
 @import 'common/icons';
 @import 'common/normalize';
-@import 'common/mixins';
-@import 'common/placeholders';
 @import 'common/general';
 @import 'common/typo';
+@import 'common/forms';
 
-//components
+// components
 @import 'components/navbar';
 @import 'components/jumbotron';
+@import 'components/buttons';
