--- a/src/templates/partials/jumbotron.mustache
+++ b/src/templates/partials/jumbotron.mustache
@@ -1,7 +1,18 @@
 <section class="jumbotron__wrapper">
     {{> navbar }}
 
-    <div class="jumbotron">
-        <h1 class="h1">Conheça o Warmapp</h1>
+    <div class="jumbotron container">
+        <h1 class="h1">Conheça o Warmapp!</h1>
+
+        <h2 class="h4 jumbotron__subtitle">Crie uma playlist a partir de um evento do facebook.</h3>
+
+        <form class="form form--main">
+            <div class="form__group">
+                <input type="text" class="form__text form__text--main" placeholder="https://www.facebook.com/events/XXXXXXXXXXXXXXX/">
+                <button type="submit" class="btn btn--main btn--icon">
+                    Enviar
+                </button>
+            </div>
+        </form>
     </div>
 </section>
