--- a/src/css/common/general.styl
+++ b/src/css/common/general.styl
@@ -1,10 +1,22 @@
-body, html {
+* {
+    box-sizing: border-box;
+}
+
+html {
     font-family: main-font;
-    font-weight: 300;
+    font-weight: 400;
     font-size: font-size-base;
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
+
+button, input[type="submit"] {
+    border: none;
+}
+
+.container {
+    center(container-width);
 }
