--- a/src/css/common/icons.styl
+++ b/src/css/common/icons.styl
@@ -23,14 +23,15 @@ icons = @block {
  i-mixer = @block {content: "\EA0A"; {icons}}
  i-mute = @block {content: "\EA0B"; {icons}}
  i-note-multiple = @block {content: "\EA0C"; {icons}}
- i-pause-button = @block {content: "\EA0D"; {icons}}
- i-play-button = @block {content: "\EA0E"; {icons}}
- i-playlist = @block {content: "\EA0F"; {icons}}
- i-radio-ghettoblaster = @block {content: "\EA10"; {icons}}
- i-repeat-button = @block {content: "\EA11"; {icons}}
- i-rewind-button = @block {content: "\EA12"; {icons}}
- i-shuffle-button = @block {content: "\EA13"; {icons}}
- i-stop-button = @block {content: "\EA14"; {icons}}
- i-tape = @block {content: "\EA15"; {icons}}
- i-volume-down = @block {content: "\EA16"; {icons}}
- i-volume-up = @block {content: "\EA17"; {icons}}
+ i-paperplane = @block {content: "\EA0D"; {icons}}
+ i-pause-button = @block {content: "\EA0E"; {icons}}
+ i-play-button = @block {content: "\EA0F"; {icons}}
+ i-playlist = @block {content: "\EA10"; {icons}}
+ i-radio-ghettoblaster = @block {content: "\EA11"; {icons}}
+ i-repeat-button = @block {content: "\EA12"; {icons}}
+ i-rewind-button = @block {content: "\EA13"; {icons}}
+ i-shuffle-button = @block {content: "\EA14"; {icons}}
+ i-stop-button = @block {content: "\EA15"; {icons}}
+ i-tape = @block {content: "\EA16"; {icons}}
+ i-volume-down = @block {content: "\EA17"; {icons}}
+ i-volume-up = @block {content: "\EA18"; {icons}}
