--- a/src/css/components/jumbotron.styl
+++ b/src/css/components/jumbotron.styl
@@ -1,10 +1,14 @@
 .jumbotron {
     color: white;
-    margin-top: 100px;
     text-align: center;
-    center(container-width);
+    remify(margin-top, 100px);
 
     &__wrapper {
         background-gradient-image('bg.jpg', grapefruit-high, aqua-high, 0.8);
+        background-size: cover;
+    }
+
+    &__subtitle {
+        remify(margin-bottom, 60px);
     }
 }
