Added height 100% to the main page

--- a/src/css/common/forms.styl
+++ b/src/css/common/forms.styl
@@ -21,9 +21,8 @@
     }
 
     &--main {
-        center(container-width - container-width / 3);
+        center(container-width - container-width / 3);kila
         padding-left: 10px;
         padding-right: 10px;
-        margin-bottom: 200px;
     }
 }
