--- a/src/css/common/general.styl
+++ b/src/css/common/general.styl
@@ -6,6 +6,7 @@ html {
     font-family: main-font;
     font-weight: 400;
     font-size: font-size-base;
+    height: 100%;
 }
 
 a {
@@ -19,4 +20,8 @@ button, input[type="submit"] {
 
 .container {
     center(container-width);
+}
+
+.main-page {
+    height: 100%;
 }
