--- a/src/css/components/jumbotron.styl
+++ b/src/css/components/jumbotron.styl
@@ -6,9 +6,14 @@
     &__wrapper {
         background-gradient-image('bg.jpg', grapefruit-high, aqua-high, 0.8);
         background-size: cover;
+
+        &--full {
+            height: 100%;
+        }
     }
 
     &__subtitle {
         remify(margin-bottom, 60px);
     }
+
 }
