--- a/src/templates/partials/jumbotron.mustache
+++ b/src/templates/partials/jumbotron.mustache
@@ -1,4 +1,4 @@
-<section class="jumbotron__wrapper">
+<section class="jumbotron__wrapper jumbotron__wrapper--full">
     {{> navbar }}
 
     <div class="jumbotron container">
