--- a/src/templates/partials/navbar.mustache
+++ b/src/templates/partials/navbar.mustache
@@ -2,17 +2,12 @@
     <nav class="navbar__container">
         <ul class="navbar__list">
             <li>
-                <a href="/" class="navbar__item navbar__item--logo">
-                    {{! <img src="http://placehold.it/120x50" alt="Logo"> }}
-                </a>
-            </li>
-            <li>
                 <a href="#" class="navbar__item">warmapp</a>
             </li>
         </ul>
         <ul class="navbar__list navbar__list--right">
             <li>
-                <a href="javascript:;" class="navbar__item">ITEM 1</a>
+                <a href="javascript:;" class="navbar__item">Saiba mais</a>
             </li>
         </ul>
     </nav>
