--- a/src/templates/playlist.mustache
+++ b/src/templates/playlist.mustache
@@ -4,7 +4,7 @@
     <title>warmapp</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="main-page">
-    {{> partials/jumbotron }}
+<body>
+    {{> navbar }}
 </body>
 </html>
