--- a/src/css/common/forms.styl
+++ b/src/css/common/forms.styl
@@ -21,7 +21,7 @@
     }
 
     &--main {
-        center(container-width - container-width / 3);kila
+        center(container-width - container-width / 3);
         padding-left: 10px;
         padding-right: 10px;
     }
