--- a/src/css/helpers/variables.styl
+++ b/src/css/helpers/variables.styl
@@ -8,8 +8,8 @@ aqua-low = #3bafda;
 light-gray-high = #f5f7fa;
 light-gray-low = #e6e9ed;
 
-dark-gray-high = #656d78;
-dark-gray-low = #434a54;
+dark-gray-low = #1c1c1f;
+dark-gray-high = lighten(dark-gray-low, 10%);
 
 //font specs
 font-size-base = 16px;
@@ -20,6 +20,9 @@ font-path = '../fonts/';
 img-path = '../img/';
 
 //structure specs
-container-width = 1024px;
+container-width = 1200px;
+
+//rupture variables
+rupture.mobile-cutoff = 600px;
 
 
