--- a/src/templates/partials/navbar-home.mustache
+++ b/src/templates/partials/navbar-home.mustache
@@ -1,4 +1,4 @@
-<header class="navbar navbar--inner">
+<header class="navbar navbar--dependent">
     <nav class="navbar__container container">
         <ul class="navbar__list">
             <li>
