--- a/src/css/common/general.styl
+++ b/src/css/common/general.styl
@@ -12,6 +12,7 @@ html {
 a {
     color: inherit;
     text-decoration: none;
+    outline: none;
 }
 
 button, input[type="submit"] {
@@ -19,9 +20,13 @@ button, input[type="submit"] {
 }
 
 .container {
-    center(container-width);
+    center(container-width, 20px);
 }
 
-.main-page {
-    height: 100%;
+body {
+    min-height: 100%;
+}
+
+.b-playlist {
+    padding-top: 50px;
 }
