--- a/src/css/styles.styl
+++ b/src/css/styles.styl
@@ -20,3 +20,5 @@
 @import 'components/navbar';
 @import 'components/jumbotron';
 @import 'components/buttons';
+@import 'components/video';
+@import 'components/playlist';
