--- a/src/templates/index.mustache
+++ b/src/templates/index.mustache
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="main-page">
-    {{> partials/jumbotron }}
+    {{> partials/jumbomain }}
 </body>
 </html>
