--- a/src/templates/partials/jumbomain.mustache
+++ b/src/templates/partials/jumbomain.mustache
@@ -1,5 +1,5 @@
 <section class="jumbotron__wrapper jumbotron__wrapper--full">
-    {{> navbar }}
+    {{> navbar-home }}
 
     <div class="jumbotron container">
         <h1 class="h1">Conheça o Warmapp!</h1>
@@ -9,9 +9,9 @@
         <form class="form form--main">
             <div class="form__group">
                 <input type="text" class="form__text form__text--main" placeholder="https://www.facebook.com/events/XXXXXXXXXXXXXXX/">
-                <button type="submit" class="btn btn--main btn--icon">
+                <a href="playlist.html" class="btn btn--main btn--icon">
                     Enviar
-                </button>
+                </a>
             </div>
         </form>
     </div>
