--- a/src/templates/playlist.mustache
+++ b/src/templates/playlist.mustache
@@ -4,7 +4,8 @@
     <title>warmapp</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    {{> navbar }}
+<body class="b-playlist">
+    {{> partials/navbar }}
+    {{> partials/video }}
 </body>
 </html>
