correct some details to send to github

--- a/src/css/common/general.styl
+++ b/src/css/common/general.styl
@@ -24,9 +24,11 @@ button, input[type="submit"] {
 }
 
 body {
-    min-height: 100%;
+    height: 100%;
 }
 
 .b-playlist {
+    min-height: 100%
+    height: auto;
     padding-top: 50px;
 }
