--- a/src/templates/index.mustache
+++ b/src/templates/index.mustache
@@ -4,7 +4,7 @@
     <title>warmapp</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="main-page">
+<body>
     {{> partials/jumbomain }}
 </body>
 </html>
